# Proyecto_J

./: .dockerignore  .flake8  DEPLOYMENT.md  IMPLEMENTACION_PNG_EXPORT.md  MEJORAS_IMPLEMENTADAS.md  PLAN_UNIFICACION_TESTS.md  Procfile  README.md  RESUMEN_UNIFICACION_README.md  SISTEMA_PRUEBAS_AUTOMATIZADAS.md  SOLUCION_CARGA_ARCHIVOS.md  __init__.py  app_estadistica_avanzada.py  app_front.py  check_python_version.py  datos_ejemplo_features.csv  datos_ejemplo_maquina_relojeria.csv  mypy.ini  pyproject.toml  render.yaml  requirements.txt  requirements_social_sciences.txt  requirements_unified.txt  run_streamlit.py  setup.py  setup.sh  social_sciences_analyzer.py  social_sciences_streamlit.py  src  streamlit_app.py  streamlit_app_simple.py  temp_ejemplo.xlsx  temp_proyecto_J_datos_ejemplo 1.xlsx  test_app_estadistica.py  test_complex_grouping.py  test_excel_load.py  test_features_complete.py  test_features_simple.py  test_imports.py  test_nl_query.py  (+6 more)
.github/workflows/: automated-tests.yml  ci.yml  python311.yml  simple-ci.yml
config/: config.yml  security.yml
data_folder/: reporte_encuesta_20250627_223836_data.csv  reporte_features_20250627_223836_data.csv
docs/: CARACTERISTICAS_AVANZADAS.md  INDICE_DOCUMENTACION.md  INDICE_PROYECTO.md  README_ARQUITECTURA_RELOJ_SUIZO.md  README_LOGGING_JSON.md  README_MANEJO_ERRORES.md  README_SOCIAL_SCIENCES.md  REPORTE_COMPLETO_PROYECTO.md  RESUMEN_SISTEMA_ERRORES.md
estadistica/: estadistica.py
examples/: app_encuestas.py  app_estadistica_avanzada.py  app_front.py  asistente_encuestas.py  ejemplo_arquitectura_reloj_suizo.py  ejemplo_integracion_app_front.py  ejemplo_integracion_logging_json.py  ejemplo_integracion_pipeline_json.py  ejemplo_logging_json.py  ejemplo_manejo_errores_avanzado.py  ejemplo_manejo_errores_simple.py  ejemplo_reglas_negocio.py  ejemplo_sistema_completo.py  ejemplo_sistema_completo_final.py  ejemplo_sistema_completo_serializacion.py  ejemplo_validacion_automatica.py  social_sciences_analyzer.py  social_sciences_streamlit.py  test_app.py  test_arquitectura_reloj_suizo.py  test_final_integration.py  test_imports.py  test_logger_final.py  test_logger_serialization.py  test_serialization.py  wizard_streamlit.py
logs/: .coverage  all_sessions_20250629_190728.json  coverage.xml  pipeline.json  session_936ad858-b8a1-405d-a223-72c524120223_20250629_190727.json  test_results.json
orchestrator/: pipeline_orchestrator.py
processing/: __init__.py  business_error_handler.py  business_rules.py  config_manager.py  config_schema.py  data_types.py  data_validators.py  dependency_manager.py  error_reporter.py  features.py  filters.py  io.py  json_logging.py  json_utils.py  logging.py  stats.py  types.py  validation_decorators.py  visualization.py
proyecto_j/: README.md  README_EJECUCION.md  __init__.py  config.yml  environment.yml  requirements.txt  run_streamlit.py  streamlit_app.py
proyecto_j/processing/: __init__.py  schema_validator.py
proyecto_j/src/: __init__.py  analisis_demografico.py  analisis_survey.py  ciencias_sociales.py  cli.py  column_inspector.py  complex_grouping.py  core.py  estadistica.py  nl_query.py  nl_query_trends.py  pipeline_demografico.py  pipeline_encuestas.py  project_j_pipeline.py  steps.py  utils.py  validacion_chile.py  variable_classifier.py
proyecto_j/tests/: test_column_inspector.py  test_pipeline.py  test_pipeline_demografico.py  test_pipeline_encuestas.py
proyecto_j/utils/: ejemplo_datos.py  run_async_system.py
scripts/: check_python_version.py  install.bat  install.sh  pre-commit-hook.py  run_automated_tests.py  setup_automated_testing.bat  tasks.py  test_advanced_stats.py  test_survey_analysis.py  verify_improvements.py
src_folder/: streamlit_app.py  streamlit_app_backup.py
tests/: README.md  conftest.py  pytest.ini  run_tests.py  temp_report_data.csv  test_advanced_stats.py  test_config_manager.py  test_features_complete.py  test_file_upload_integration.py  test_integration_eda.py  test_stats.py  test_survey_analysis.py  test_survey_features.py
tests/e2e/: test_app_estadistica.py  test_app_workflow.py  test_json_logging_e2e.py  test_pipeline_json_logging.py  test_streamlit_e2e.py
tests/fixtures/: sample_data.csv  test_config.yml
tests/integration/: test_arquitectura_reloj_suizo_legacy.py  test_complex_grouping_legacy.py  test_diseno_nuevo_legacy.py  test_features_simple.py  test_final_simple.py  test_integration_eda.py  test_integration_modules_legacy.py  test_pipeline.py  test_pipeline_demografico_legacy.py  test_pipeline_encuestas_legacy.py  test_streamlit_fix_legacy.py  test_survey_analysis.py  test_validacion_chile_legacy.py
tests/unit/: test_column_inspector_legacy.py  test_imports.py  test_io_mock.py  test_pipeline_legacy.py  test_stats.py  test_variable_classifier_legacy.py
ui/: streamlit_app.py  test_app.py
